--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
+    "react-responsive-carousel": "^3.2.22",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
